<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@null">

    <TableLayout
        android:layout_weight="7"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp">
      <TableRow android:layout_marginTop="10dp">
          <TextView
              style="@style/Music_TextView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/number_1" />
          <Button
              android:id="@+id/nowPlayingBtn"
              style="@style/Music_Button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/now_playing" />
      </TableRow>
        <TableRow android:layout_marginTop="10dp">
            <TextView
                style="@style/Music_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_2" />
            <Button
                android:id="@+id/allSongsBtn"
                style="@style/Music_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_songs" />
        </TableRow>
        <TableRow android:layout_marginTop="10dp">
            <TextView
                style="@style/Music_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_3" />
            <Button
                android:id="@+id/allVideosBtn"
                style="@style/Music_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_videos" />
        </TableRow>
        <TableRow android:layout_marginTop="10dp">
            <TextView
                style="@style/Music_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_4" />
            <Button
                android:id="@+id/playlistsBtn"
                style="@style/Music_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_playlists" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="bottom"
        android:layout_weight="3"
        android:background="@android:color/black"
        android:orientation="horizontal">

        <Button
            android:id="@+id/OKBtn"
            android:layout_weight="1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:text="Menu"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/backBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:text="Back"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>